--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-README.md
+
+Melite Coin - general purpose coin
+
+We will improve some features of the original Melite coin found on original github:  https://github.com/daribtcv/Melite
+
